plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.wanted'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

def queryDslVersion = "5.1.0"

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.apache.commons:commons-lang3:3.14.0' // Exception에 에러 많다.
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.postgresql:postgresql:42.7.3' // 최신 버전 확인 가능
	implementation 'p6spy:p6spy:3.9.1'
	implementation 'org.springframework.boot:spring-boot-starter-logging'  // 로깅을 위한 설정

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// QueryDSL
	implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
	annotationProcessor("com.querydsl:querydsl-apt:5.0.0:jakarta")
	annotationProcessor("jakarta.persistence:jakarta.persistence-api")
	annotationProcessor("jakarta.annotation:jakarta.annotation-api")
}

tasks.named('test') {
	useJUnitPlatform()
}

clean {
	delete file('src/main/generated')
}

// === QueryDSL 설정 ===
def generatedDir = file("src/main/generated")

tasks.withType(JavaCompile).configureEach {
	options.annotationProcessorGeneratedSourcesDirectory = generatedDir
}

sourceSets {
	main {
		java {
			srcDirs += generatedDir
		}
	}
}

tasks.named('build') {
	dependsOn tasks.named('compileQuerydsl')
}

// Q타입 생성 Task 등록
tasks.register("compileQuerydsl", JavaCompile) {
	group = "build"
	description = "Generate QueryDSL Q-types"
	classpath = sourceSets.main.compileClasspath
	source = sourceSets.main.java
	options.annotationProcessorPath = configurations.annotationProcessor
	destinationDirectory = generatedDir
}
